--- a/Complex2proteins.html
+++ b/Complex2proteins.html
@@ -11,7 +11,7 @@
 
 
 
-        <body>Protein-wise complex membership list can be viewed <a href="Protein2complex.html"> here</a>. <br> All predicted complexes are listed below with their corresponding proteins. Only SARS-COV2 interacting protein complexes from the predictions can be found <a href="Complex2proteins_covid.html"> here</a>. <br>
+        <body> <br>
         <section>
 
      <table style="width:100%">
