--- a/humap/SARS_COV2prots/SARS-CoV2 nsp5.html
+++ b/humap/SARS_COV2prots/SARS-CoV2 nsp5.html
@@ -6,7 +6,11 @@
 <head>
 <title>SARS-CoV2 nsp5</title>
 
-        <script src="../cytoscape.js"></script>
+		<script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
+
+		<script src="https://unpkg.com/layout-base/layout-base.js"></script>
+<script src="https://unpkg.com/cose-base/cose-base.js"></script>
+<script src="https://unpkg.com/cytoscape-fcose/cytoscape-fcose.js"></script>
     </head>
 
     <style>
